# etomyte

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/etomyte/: __init__.py  __main__.py  server.py
src/etomyte/adapter/: file.py
src/etomyte/core/: __init__.py  app.py  cms.py  exception.py  route.py  server.py
src/test/: conftest.py  test_content.py  test_file_adapter.py  test_routes.py  test_snippets.py  test_template.py
src/test/sample_project/config/: config.py  routes.py
src/test/sample_project/contents/: 404.html
src/test/sample_project/snippets/: about_cars.py
src/test/sample_project/templates/: index.html  index.md
src/test/sample_project/templates/product/cars/: MyCar.md
tests/: app.py
